# concurrencyRay

./: CMakeLists.txt  README.md
include/: application.hpp  camera.hpp  config.hpp  ray.hpp  render_buffer.hpp  renderer.hpp  scene.hpp  sphere.hpp  thread_pool.hpp  vec3.hpp
src/: main.cpp
